--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -64,9 +64,9 @@
   <string name="preferences_category_user_actions">User Actions</string>
   <string name="preferences_city_name_summary">Update your foursquare city."</string>
   <string name="preferences_city_name_title">Update City</string>
-  <string name="preferences_friend_add_summary">Add Friends with foursquare.com.</string>
+  <string name="preferences_friend_add_summary">Find others who are also on Foursquare.</string>
   <string name="preferences_friend_add_title">Add Friends</string>
-  <string name="preferences_friend_requests_summary">Manage friends with foursquare.com.</string>
+  <string name="preferences_friend_requests_summary">Manage pending friend requests.</string>
   <string name="preferences_friend_requests_title">Friend Requests</string>
   <string name="preferences_immediate_checkin_summary_off">Prompt for a shout when using \'Quick Checkin\'.</string>
   <string name="preferences_immediate_checkin_summary_on">Checkin without confirmation when using \'Quick Checkin\'.</string>
