--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -118,20 +118,17 @@
   <string name="zip_code">Zip Code</string>
   <string name="search_description">Venues and friends</string>
   <string name="add_friends_instructions">Foursquare is more fun when you connect with your friends. Your friends can see the email address and phone number you gave us when you signed up, so choose wisely.</string>
-  <string name="add_friends_by_name_btn_label">Find by name</string>
-  <string name="add_friends_by_phonenumber_btn_label">Find using phone number</string>
+  <string name="add_friends_by_name_or_phone_btn_label">Find by name or phone number</string>
   <string name="add_friends_by_twitter_btn_label">Find Twitter friends</string>
-  <string name="add_friends_by_name_instructions">Find a friend using their name</string>
-  <string name="add_friends_by_name_hint">Enter a name (first and/or last)</string>
-  <string name="add_friends_by_phonenumber_instructions">Find a friend using a phone number</string>
-  <string name="add_friends_by_phonenumber_hint">Enter a phone number</string>
+  <string name="add_friends_by_address_book_btn_label">Scan my address book</string>
+  <string name="add_friends_by_name_or_phone_instructions">Find friends by name or phone number</string>
+  <string name="add_friends_by_name_or_phone_hint">Enter a name or phone number</string>
   <string name="add_friends_by_twitter_instructions">Find a friend by Twitter handle</string>
   <string name="add_friends_by_twitter_hint">Enter your Twitter name</string> 
   <string name="add_friends_by_addressbook_instructions">Find friends from address book</string>
   <string name="add_friends_by_addressbook_additional_instructions">We\'re scanning your list of contacts in hopes of finding you some foursquare friends. This may take a few seconds so thanks for your patience!</string>
   <string name="add_friends_progress_bar_message_find">Searching for friends...</string> 
   <string name="add_friends_progress_bar_message_send_request">Sending friend invitation...</string>
-  <string name="add_friends_by_address_book">Scan my address book</string>
   <string name="add_friends_by_facebook">Find Facebook friends</string>
   <string name="add_friends_request_sent_ok">Friend request sent ok!</string>
   <string name="add_friends_no_matches">No matches found.</string>
