--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -134,4 +134,6 @@
   <string name="add_friends_no_matches">No matches found.</string>
   <string name="friend_requests_activity_label">Foursquare Friend Requests</string>
   <string name="friend_requests_decision_sent_ok">Decision sent ok!</string>
+  <string name="user_activity_fetch_full_image_title">Fetching Image</string>
+  <string name="user_activity_fetch_full_image_message">Fetching image...</string>
 </resources>
