Cleaned up fetch image activity so as to not bother using BitmapFactory for saving the fetched image. Using the bitmap factory step wasn't necessary and also could be problematic if the target image was very large, this case was not being handled.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -135,5 +135,5 @@
   <string name="friend_requests_activity_label">Foursquare Friend Requests</string>
   <string name="friend_requests_decision_sent_ok">Decision sent ok!</string>
   <string name="user_activity_fetch_full_image_title">Fetching Image</string>
-  <string name="user_activity_fetch_full_image_message">Fetching image...</string>
+  <string name="user_activity_fetch_full_image_message">Fetching Image...</string>
 </resources>
