--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -46,7 +46,7 @@
   <string name="map_label">Map</string>
   <string name="mayor_header">Mayor</string>
   <string name="myinfo_label">My Info</string>
-  <string name="nearby_label">Nearby</string>
+  <string name="nearby_label">Places</string>
   <string name="need_an_account">Need an account?</string>
   <string name="no_checkins_be_the_first">No checkins here yet, be the first!</string>
   <string name="no_friend_checkins">No recent friend checkins. Find cooler friends!</string>
