Large push to get new user details activity in. To support the new activity, it required several new additions including making the foursquare types parcelable so it would be easy to pass instances of objects between activities. Also added history web service support. User details activity now shows logged-in-user's history, friends' info, and friends list for all. While functional, this build now requires styling for ui components. Also need to update the parser generator python files to do the parcelable generation automatically as these updates were only done manually.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -141,4 +141,19 @@
   <string name="friend_requests_progress_bar_ignore_request">Ignoring request....</string>
   <string name="user_activity_fetch_full_image_title">Fetching Image</string>
   <string name="user_activity_fetch_full_image_message">Fetching Image...</string>
+  <string name="user_actions_activity_no_info">No additional information available.</string>
+  <string name="user_actions_activity_action_sms">SMS</string>
+  <string name="user_actions_activity_action_email">Email</string>
+  <string name="user_actions_activity_action_phone">Call</string>
+  <string name="user_actions_activity_action_send_friend_request">Send A Friend Request</string>
+  <string name="user_actions_activity_action_approve_pending_friend_request">Approve Pending Friend Request</string>
+  <string name="user_actions_activity_action_readonly_friend_request">Friend Request Sent</string>
+  <string name="user_actions_activity_action_twitter">Twitter</string>
+  <string name="user_actions_activity_action_facebook">Facebook</string>
+  <string name="user_history_activity_no_info">No history available.</string>
+  <string name="user_details_activity_tab_title_info">Info</string>
+  <string name="user_details_activity_tab_title_history">History</string>
+  <string name="user_details_activity_tab_title_friends">Friends</string>
+  <string name="user_details_activity_title_mayorships">MAYORSHIPS</string>
+  <string name="user_details_activity_title_badges">BADGES</string>
 </resources>
