Moved 'friends' tab to 0th position on startup page as requested, added 'me' tab which just shows the logged-in user's own info.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -156,4 +156,5 @@
   <string name="user_details_activity_tab_title_friends">Friends</string>
   <string name="user_details_activity_title_mayorships">MAYORSHIPS</string>
   <string name="user_details_activity_title_badges">BADGES</string>
+  <string name="main_activity_tab_title_me">Me</string>
 </resources>
