--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -159,4 +159,5 @@
   <string name="main_activity_tab_title_me">Me</string>
   <string name="checkin_execute_activity_progress_bar_message">Checking-in...</string>
   <string name="shout_execute_activity_progress_bar_message">Posting shout...</string>
-</resources>
+  <string name="checkin_result_dialog_score_total">Total for this checkin:</string>
+</resources> 
