--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -77,9 +77,9 @@
   <string name="preferences_friend_add_title">Add Friends</string>
   <string name="preferences_friend_requests_summary">Manage pending friend requests.</string>
   <string name="preferences_friend_requests_title">Friend Requests</string>
-  <string name="preferences_immediate_checkin_summary_off">Prompt for a shout when using \'Quick Checkin\'.</string>
-  <string name="preferences_immediate_checkin_summary_on">Checkin without confirmation when using \'Quick Checkin\'.</string>
-  <string name="preferences_immediate_checkin_title">Checkin without prompt</string>
+  <string name="preferences_immediate_checkin_summary_off">Prompt for a shout when using the check-in button on a venue page.</string>
+  <string name="preferences_immediate_checkin_summary_on">Do not prompt for a shout when using the check-in button on a venue page.</string>
+  <string name="preferences_immediate_checkin_title">Check-in without prompt</string>
   <string name="preferences_label">Preferences</string>
   <string name="preferences_logout_summary">Sign out of Foursquare.</string>
   <string name="preferences_logout_title">Logout</string>
@@ -182,4 +182,5 @@
   <string name="tip_activity_prgoress_complete_done">Tip has been marked as done!</string>
   <string name="sign_up_gender">Gender</string>
   <string name="sign_up_progress_bar_message_send_request">Joining Foursquare...</string>
+  <string name="venue_activity_checkin_button">CHECK-IN HERE</string>
 </resources> 
