--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -45,7 +45,7 @@
   <string name="login_dialog_title">Logging in...</string>
   <string name="login_failed_login_toast">Unable to log in. Please check your phone number and password.</string>
   <string name="login_get_started">Get Started</string>
-  <string name="login_get_started_more">Got foursquare account? We just need your phone# and password</string>
+  <string name="login_get_started_more">Got a foursquare account? We just need your email or phone# and password</string>
   <string name="login_label">Log-in</string>
   <string name="login_welcome_toast">Welcome to Foursquare!</string>
   <string name="map_label">Map</string>
