--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -195,4 +195,8 @@
   <string name="venue_activity_checkin_button">CHECK-IN HERE</string>
   <string name="venue_activity_checkin_button_quick">QUICK CHECK-IN HERE</string>
   <string name="send_invite_button">Invite</string>
+  <string name="prelaunch_text">Prelaunch Text</string>
+  <string name="prelaunch_button">OK</string>
+  <string name="prelaunch_checkbox_dont_show_again">" Don\'t remind me again."</string>
+        
 </resources> 
