--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -146,6 +146,8 @@
   <string name="add_friends_progress_bar_message_find">Searching for friends...</string> 
   <string name="add_friends_progress_bar_message_send_request">Sending friend invitation...</string>
   <string name="add_friends_progress_bar_message_send_invite">Sending invitation...</string>
+  <string name="add_friends_progress_bar_message_pings">Updating pings status...</string>
+  <string name="add_friends_progress_bar_title_pings">Pings</string>
   <string name="add_friends_by_facebook">Find Facebook friends</string>
   <string name="add_friends_request_sent_ok">Friend request sent ok!</string>
   <string name="add_friends_invite_sent_ok">Invite sent ok!</string>
@@ -195,9 +197,9 @@
   <string name="venue_activity_checkin_button">CHECK-IN HERE</string>
   <string name="venue_activity_checkin_button_quick">QUICK CHECK-IN HERE</string>
   <string name="send_invite_button">Invite</string>
-  <string name="prelaunch_text">본 어플리케이션은 사용중 데이터통화료가 발생할 수 있습니다. WiFi를 사용하시거나 데이터존 프리에 가입하실 것을 권장 드립니다.</string>
-  <string name="prelaunch_button">확인</string>
-  <string name="prelaunch_checkbox_dont_show_again">" 안내문 다시보지 않기"</string>
+  <string name="prelaunch_text"></string>
+  <string name="prelaunch_button"></string>
+  <string name="prelaunch_checkbox_dont_show_again"></string>
   <string name="preferences_category_notifications">Notifications</string>
   <string name="preferences_notifications_title">Notifications</string>
   <string name="preferences_notifications_summary_on">Check status of friends in the background.</string>
@@ -206,5 +208,9 @@
   <string name="preferences_notifications_refresh_interval_in_minutes_summary">Choose how often to update notifications in the background.</string>
   <string name="preferences_progressbar_title_notifications">Notifications</string>
   <string name="preferences_progressbar_message_notifications">Updating notification settings...</string>
-      
+  <string name="preferences_notifications_vibrate_title">Notifications Vibrate</string>
+  <string name="preferences_notifications_vibrate_summary_on">Vibrate the phone when new notifications are received.</string>
+  <string name="preferences_notifications_vibrate_summary_off">Do not vibrate the phone when new notifications are received.</string>
+  <string name="user_actions_activity_action_pings_on">Pings on</string>
+  <string name="user_actions_activity_action_pings_off">Pings off</string>
 </resources> 
