--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -202,15 +202,18 @@
   <string name="prelaunch_checkbox_dont_show_again"></string>
   <string name="preferences_category_notifications">Notifications</string>
   <string name="preferences_notifications_title">Notifications</string>
-  <string name="preferences_notifications_summary_on">Check status of friends in the background.</string>
-  <string name="preferences_notifications_summary_off">Don\'t do any background updates of friends etc.</string>
-  <string name="preferences_notifications_refresh_interval_in_minutes_title">Notifications Rate</string>
-  <string name="preferences_notifications_refresh_interval_in_minutes_summary">Choose how often to update notifications in the background.</string>
-  <string name="preferences_progressbar_title_notifications">Notifications</string>
-  <string name="preferences_progressbar_message_notifications">Updating notification settings...</string>
-  <string name="preferences_notifications_vibrate_title">Notifications Vibrate</string>
-  <string name="preferences_notifications_vibrate_summary_on">Vibrate the phone when new notifications are received.</string>
-  <string name="preferences_notifications_vibrate_summary_off">Do not vibrate the phone when new notifications are received.</string>
+  <string name="preferences_notifications_summary">Check status of friends in the background.</string>
   <string name="user_actions_activity_action_pings_on">Pings on</string>
   <string name="user_actions_activity_action_pings_off">Pings off</string>
+  <string name="notification_settings_instructions">Notifications run in the background at the interval you choose below. When a friend checks-in nearby, you\'ll see a Foursquare icon appear on your notification bar.\n\nYou can turn notifications off per user from their user details page.</string>
+  <string name="notification_settings_on">Enable notifications</string>
+  <string name="notification_settings_interval">Set the refresh rate for notifications:</string>
+  <string name="notification_settings_vibrate">Vibrate the phone when new notifications are received</string>
+  <string name="notification_settings_btn_save_settings">Save Settings</string>
+  <string name="notification_settings_progressbar_title_notifications">Notifications</string>
+  <string name="notification_settings_progressbar_message_notifications">Updating notification settings...</string>
+  <string name="notification_settings_spinner_interval_prompt">Notification Interval</string>
+  <string name="notification_settings_title">Foursquare Notification Settings</string>
+  <string name="notification_settings_progressbar_title_updateuser">Notification Settings</string>
+  <string name="notification_settings_progressbar_message_updateuser">Updating notification settings...</string>
 </resources> 
